# RNA_assessment

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: assessment-reference.md  core-concepts.md  getting-started.md  index.md  tooling-and-api.md  workflows-and-benchmarking.md
docs/stylesheets/: extra.css
examples/: basic_usage.py
src/RNA_normalizer/: __init__.py
src/rna_assessment/: __init__.py  api.py  benchmark.py  cli.py  exceptions.py  mc_annotate.py  metrics.py  resources.py  structures.py
src/rna_kit/: __init__.py  api.py  benchmark.py  cli.py  extraction.py  mc_annotate.py  metrics.py  molprobity.py  normalization.py  reports.py  structures.py  tools.py  usalign.py
tests/: conftest.py  test_alignment.py  test_cli.py  test_legacy_import.py  test_mc_annotate.py  test_metrics.py  test_molprobity.py  test_normalization.py  test_reports.py  test_usalign.py
